# jimp2

./: README.md
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: CMakeLists.txt  TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/geometry/: CMakeLists.txt  Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/: CMakeLists.txt
lab5/friendclass/: CMakeLists.txt  friendclass.cpp  friendclass.h  main.cpp
lab8/: CMakeLists.txt
(+31 files in other folders)
